<resources>
    <string name="app_name">MyBook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numer_telefonu">Numer telefonu</string>
    <string name="powt_rz_has_o">Powtórz hasło</string>
    <string name="has_o">Hasło</string>
    <string name="zarejestruj">Zarejestruj!</string>
    <string name="login">Login</string>
</resources>
