<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.oskarpolak.mybook.RegisterActivity">

    <EditText
        android:id="@+id/registerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:paddingBottom="20dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/registerPhone"
        android:layout_alignStart="@+id/registerPhone"
        android:layout_below="@+id/registerPhone"
        android:text="@string/zarejestruj" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/registerLogin"
        android:layout_below="@+id/registerLogin"
        android:ems="10"
        android:hint="@string/has_o"
        android:inputType="textPassword"
        android:paddingBottom="20dp" />

    <EditText
        android:id="@+id/registerPasswordAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerPassword"
        android:ems="10"
        android:hint="@string/powt_rz_has_o"
        android:inputType="textPassword"
        android:paddingBottom="20dp" />

    <EditText
        android:id="@+id/registerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/registerPasswordAgain"
        android:layout_below="@+id/registerPasswordAgain"
        android:ems="10"
        android:hint="@string/numer_telefonu"
        android:inputType="phone"
        android:paddingBottom="20dp" />
</RelativeLayout>
